# gcnav-c

./: .gitignore  CMakeLists.txt  License.txt  README.md  bordercut.c  bordercut.h
code/c_impl/: Makefile
code/c_impl/graphcut/: CMakeLists.txt  Makefile
code/c_impl/graphcut/include/gmgt/: graphmgt.h
code/c_impl/graphcut/include/structs/: queue.h  stack.h
code/c_impl/graphcut/include/ug/: ungraph.h
code/c_impl/graphcut/include/utils/: edgeutils.h  mathutils.h
code/c_impl/graphcut/src/: gccheck.c  gcinit.c  gcprocess.c
code/c_impl/graphcut/src/gmgt/: graphmgt.c
code/c_impl/graphcut/src/structs/: Makefile  queue.c
code/c_impl/graphcut/src/utils/: Makefile  edgeutils.c  mathutils.c
code/c_impl/graphcut/test/: CMakeLists.txt  Makefile
code/c_impl/graphcut/test/src/: mathtest.c  test.c
code/c_impl/test/: Makefile
code/c_impl/test/include/: testing.h
code/c_impl/tests/: CMakeLists.txt
code/c_impl/tests/data/scenarios/scene10/: inputlist
code/c_impl/tests/data/scenarios/scene4/: graphparams
code/c_impl/tests/data/scenarios/scene8/: inputlist
code/c_impl/tests/include/: gctest.h
code/matlab/: addCapacity.m  addXYCapacity.m  applyGraphInput.m  augmentPath.m  autocorr.m  borderCut.m  buildTrees.m  getAvailable.m  getEdges.m  initFlowData.m  initGraph.m  isLabel.m  maximumMatrix.m  mseplot.m  orphanPath.m  pathMatrix.m  pathMinimum.m  pathToRoot.m  predictorM2.m  queuepeek.m  queuepop.m  runSimulations.m  stackcontains.m  stackpeek.m
code/matlab/scenarios/: scenariolist.txt
code/matlab/scenarios/scene11/: inputlist
code/matlab/scenarios/scene12/: graphparams
code/matlab/scenarios/scene17/: graphparams
code/matlab/scenarios/scene19/: graphparams
code/matlab/scenarios/scene3/: inputlist
code/matlab/scenarios/scene5/: graphparams
gmgt/: graphmgt.c  graphmgt.h
graphcut/: CMakeLists.txt
graphcut/include/: graphcut.h  graphstructs.h
graphcut/include/dg/: digraph.h
graphcut/include/structs/: queue.h  unionfind.h
graphcut/include/ug/: ungraph.h
graphcut/src/: graphcut.c  graphstructs.h
graphcut/src/dg/: digraph.c  digraph.h
graphcut/src/gmgt/: graphmgt.c
graphcut/src/structs/: queue.c  stack.c  stack.h  unionfind.c
graphcut/src/ug/: ungraph.c
graphcut/src/utils/: edgeutils.c  mathutils.c
guidance/: CMakeLists.txt
src/c_impl/: CMakeLists.txt  GCNavConfig.h.in
src/c_impl/graphcut/include/: GraphcutConfig.h.in  graphcut.h  graphstructs.h
src/c_impl/graphcut/include/dg/: digraph.h
src/c_impl/graphcut/include/gmgt/: graphmgt.h
src/c_impl/graphcut/include/utils/: mathutils.h
src/c_impl/graphcut/src/: gcupdate.c  graphcut.c
src/c_impl/graphcut/src/gmgt/: Makefile
src/c_impl/graphcut/src/structs/: Makefile
src/c_impl/graphcut/src/utils/: Makefile
src/c_impl/sensors/: CMakeLists.txt
src/matlab/: addFlow.m  addPositionCapacity.m  alreadyContains.m  autocorr_mat.m  createPathPlot.m  crosscorr.m  findNlinkBorders.m  findNonZeroBorders.m  getCapacity.m  graphPos.m  graphXY.m  initGCData.m  maxAvailable.m  maxNlinkAvailable.m  nlinkMatrix.m  octave-workspace  parentMatrix.m  polarplot3d.m  queuecontains.m  queueempty.m  queueinit.m  queuepush.m  runNavGraph.m  setCapacity.m  simulationResults.m  stackempty.m  stackinit.m  stackpop.m  stackpush.m
src/matlab/scenarios/scene10/: graphparams
src/matlab/scenarios/scene25/: inputlist
src/matlab/scenarios/scene6/: inputlist
src/matlab/scenarios/scene7/: inputlist
structs/: stack.c  unionfind.c  unionfind.h
tests/: CMakeLists.txt
tests/data/scenarios/scene2/: inputlist
tests/src/: testrunner.c
utils/: edgeutils.h  mathutils.h
